--- a/pom.xml
+++ b/pom.xml
@@ -75,12 +75,13 @@
 			<version>2.9.8</version>
 		</dependency>
 
- <!-- descomentou-->
+ <!-- 
 		<dependency>
 			<groupId>org.glassfish.web</groupId>
 			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		descomentou-->
 
 
 
@@ -89,16 +90,25 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+		
 		<!-- 
 		<dependency>
 			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			
+		</dependency> -->
+
+
+		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+		 
+		<dependency>
+			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>4.0.0</version>
+			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
-		-->
+		
 
 
 		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
