--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,7 @@
 
 	<dependencies>
 		
-		<!-- https://mvnrepository.com/artifact/javax.servlet.jsp/jsp-api -->
-		<!-- erro ao logar : java.lang.ClassNotFoundException: javax.servlet.jsp.tagext.TagLibraryValidator-->
+	<!--
 		<dependency>
 		    <groupId>javax.servlet.jsp</groupId>
 		    <artifactId>jsp-api</artifactId>
@@ -28,33 +27,36 @@
 		    <scope>provided</scope>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/jakarta.servlet.jsp/jakarta.servlet.jsp-api -->
+		
+	
+		
 		<dependency>
 		    <groupId>jakarta.servlet.jsp</groupId>
 		    <artifactId>jakarta.servlet.jsp-api</artifactId>
 		    <version>3.0.0</version>
 		    <scope>provided</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/jakarta.servlet.jsp/jakarta.servlet.jsp-api  -->
+		
 		<dependency>
 		    <groupId>jakarta.servlet.jsp</groupId>
 		    <artifactId>jakarta.servlet.jsp-api</artifactId>
 		    <version>3.0.0</version>
 		    <scope>provided</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-impl -->
+		
 		<dependency>
 		    <groupId>org.apache.taglibs</groupId>
 		    <artifactId>taglibs-standard-impl</artifactId>
 		    <version>1.2.5</version>
 		    <scope>runtime</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-spec -->
+		
 		<dependency>
 		    <groupId>org.apache.taglibs</groupId>
 		    <artifactId>taglibs-standard-spec</artifactId>
 		    <version>1.2.5</version>
-		</dependency>
+		</dependency> -->
+		
 
 
 
@@ -75,13 +77,6 @@
 			<version>2.9.8</version>
 		</dependency>
 
- <!-- 
-		<dependency>
-			<groupId>org.glassfish.web</groupId>
-			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
-			<version>2.0.0</version>
-		</dependency>
-		descomentou-->
 
 
 
@@ -91,17 +86,7 @@
 			<version>1.2</version>
 		</dependency>
 		
-		<!-- 
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			
-		</dependency> -->
-
-
-		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-		 
+		
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -110,13 +95,30 @@
 		</dependency>
 		
 
-
-		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
 			<version>6.17.0</version>
 		</dependency>
+		
+		
+		
+		
+		
+		
+		
+		<!-- 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+		-->
+
+
+	
+	
 
 
 		<dependency>
@@ -149,12 +151,13 @@
 
 			</plugin>
 			<plugin>
+				
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.2.3</version>
 			</plugin>
 
-			<!--Plugin Heroku -->
 			<plugin>
+				
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
@@ -168,7 +171,7 @@
 								<artifactItem>
 									<groupId>com.heroku</groupId>
 									<artifactId>webapp-runner</artifactId>
-									<version>9.0.52.0</version>
+									<version>9.0.75.0</version>
 									<destFileName>webapp-runner.jar</destFileName>
 								</artifactItem>
 							</artifactItems>
