--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
          id="WebApp_ID" version="4.0">
   <display-name>curso-jsp</display-name>
   <welcome-file-list>
-    <welcome-file>indexhome.jsp</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
   </welcome-file-list> 
  
 </web-app>
