--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/principal/principal.jsp=UTF-8
 encoding//src/main/webapp/relatorio/resl-user-jsp.jrxml=UTF-8
+encoding//src/main/webapp/relatorio/sub_report_user.jrxml=UTF-8
