--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
+			<scope>test</scope>
 		</dependency>
 		
 		
@@ -106,6 +107,12 @@
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
 			<version>6.17.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports-fonts</artifactId>
+		    <version>6.17.0</version>
 		</dependency>
 		
 		<!-- 
